k3s/manifests/radar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radar
  namespace: radar
spec:
  type: ClusterIP
  selector:
    app: radar
  ports:
    - name: http
      port: 9280
      targetPort: 9280
