k3s/manifests/radar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radar
  namespace: radar
  annotations:
    tailscale.com/proxy-class: "prod"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radar
                port:
                  number: 9280
  tls:
    - hosts:
        - radar
